# czim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
czim.xcodeproj/: project.pbxproj
docs/: zim_format.md
src/: czim_archive.c  czim_archive.h  czim_archive_ext.c  czim_archive_ext.h  czim_cluster.c  czim_cluster.h  czim_compression.c  czim_compression.h  czim_entry.c  czim_entry.h  czim_file.c  czim_file.h  czim_header.c  czim_header.h  czim_narrowdown.c  czim_narrowdown.h  czim_types.c  czim_types.h  czim_utils.h
tests/: CMakeLists.txt  main.c  test_archive.c  test_entry.c  test_fixture.c  test_header.c  test_platform.h
tests/unity/: unity_config.h
